--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,9 @@
 {
   "logo": "sva",
-  "cv": "https://drive.google.com/file/d/1LHP8qMPYOtQ21eMHMvIQ6eo_D0MVe0bO/view?usp=share_link"
+  "cv": "https://drive.google.com/file/d/1LHP8qMPYOtQ21eMHMvIQ6eo_D0MVe0bO/view?usp=share_link",
+  "fullName": [
+    "Sofronov",
+    "Vitaliy",
+    "Alexandrovich"
+  ]
 }
