--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,4 +1,9 @@
 {
   "logo": "сва",
-  "cv": "https://drive.google.com/file/d/1I0a6w9ELKe91yVhRST3GyD6RxkQecfoU/view?usp=share_link"
+  "cv": "https://drive.google.com/file/d/1I0a6w9ELKe91yVhRST3GyD6RxkQecfoU/view?usp=share_link",
+  "fullName": [
+    "Софронов",
+    "Виталий",
+    "Александрович"
+  ]
 }
