--- a/public/locales/ru/contactForm.json
+++ b/public/locales/ru/contactForm.json
@@ -3,6 +3,9 @@
   "email": "е-мейл",
   "message": "сообщение",
   "submit": "отправить",
+  "resultGood": "ваше сообщение было доставлено",
+  "resultBad": "что-то пошло не так, пожалуйста обновите страницу и попробуйте снова",
+  "warnRequired": "обязательное поле",
   "warnEmail": "введите корректный email",
   "warnMinLength": "минимум 3 символа",
   "warnMaxLength": "максимум 240 символов"
